Personnalisation pour Planète-Croisière

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -3,19 +3,31 @@
 {% block title %}{{ 'title.homepage.title'|trans }}{% endblock %}
 
 {% block body %}
-    <div class="container d-flex flex-column">
+    <div class="container d-flex flex-column  bg-primary">
         <div class="row align-items-center justify-content-center min-vh-100">
             <div class="col-12 col-md-8 col-lg-6">
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <div class="valid-icon h-100 bg-primary text-white text-center py-5">
-                            <i class="bi bi-person-bounding-box"></i>
-                            <h1 class="fs-1">{{ 'title.homepage.h1'|trans }}</h1>
-                            <h3>{{ 'title.homepage.h3'|trans }}</h3>
-                            <h4>{{ 'title.homepage.h4'|trans }}</h4>
-                            <a href="{{ path('admin') }}" class="btn btn-sm btn-primary mt-3">
-                                {{ 'cta.homepage.backofficeAccess'|trans }}
-                            </a>
+                        <div class="valid-icon h-100 text-white text-center p-5">
+                            <h1 class="fs-1">
+                                <img class="img-fluid mx-auto bg-white m-3"
+                                     src="{{ asset('images/logo-planete-croisiere-2020.png') }}"
+                                     alt="Planète-Croisière">
+                            </h1>
+                            <div class="d-flex flex-column">
+                                <a href="{{ frontoffice_url }}" class="btn btn-sm btn-primary mt-3">
+                                    {{ 'cta.homepage.frontofficeAccess'|trans }}
+                                </a>
+                                <a href="{{ path('admin') }}" class="btn btn-sm btn-outline-secondary mt-3">
+                                    {{ 'cta.homepage.backofficeAccess'|trans }}
+                                </a>
+                                <a href="{{ catalog_url }}" class="btn btn-sm btn-outline-primary mt-3">
+                                    {{ 'cta.homepage.catalogAccess'|trans }}
+                                </a>
+                                <a href="{{ erp_url }}" class="btn btn-sm btn-outline-primary mt-3">
+                                    {{ 'cta.homepage.erpAccess'|trans }}
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
