--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:300,400,700&display=swap');
+$primary: #272E64;
+$secondary: #B49C8A;
+
 @import "~bootstrap";
 @import "~bootstrap-icons";
 
