--- a/templates/installation/step3.html.twig
+++ b/templates/installation/step3.html.twig
@@ -18,6 +18,7 @@
 
                     <p>{{ 'step3.help'|trans|raw }}</p>
                     <ul class="list-disc ms-8 my-4">
+                        <li>assets/locales/installation.en.json</li>
                         <li>src/Controller/Installation.php</li>
                         <li>src/DataFixtures/Installation.php</li>
                         <li>src/EventListener/InstallationCheck.php</li>
