feat: upgrade from fastfony/fastfony

--- a/templates/admin/_menu.html.twig
+++ b/templates/admin/_menu.html.twig
@@ -40,6 +40,11 @@
                 </a>
             </li>
             <li>
+                <a href="{{ path('admin_page_crud_index') }}">
+                    {{ 'menu.crud.pages'|trans }}
+                </a>
+            </li>
+            <li>
                 <a href="{{ path('admin_parameter_crud_index') }}">
                     {{ 'menu.crud.parameters'|trans }}
                 </a>
@@ -54,6 +59,13 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
             </svg>
             {{ 'menu.settings'|trans }}
+        </a>
+        <a href="{{ path('homepage') }}"
+           class="group -mx-2 flex gap-x-3 rounded-md p-2 font-semibold">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15m-3 0-3-3m0 0 3-3m-3 3H15" />
+            </svg>
+            {{ 'menu.exit'|trans }}
         </a>
     </li>
 </ul>
