squashed commit updating template

--- a/templates/_choose_theme.html.twig
+++ b/templates/_choose_theme.html.twig
@@ -18,7 +18,7 @@
                     type="radio"
                     data-choose-theme="{{ theme }}"
                     name="theme-dropdown"
-                    class="theme-controller btn btn-sm btn-block btn-ghost checked:text-white dark:checked:text-gray-800 justify-start"
+                    class="theme-controller btn btn-sm btn-block btn-ghost justify-start"
                     aria-label="{{ theme|capitalize }}"
                     value="{{ theme }}" />
             </li>
