--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -4,6 +4,14 @@
 
 {% block html_class %}h-full bg-white{% endblock %}
 
+{% block stylesheets %}
+    {{ encore_entry_link_tags('admin') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('admin') }}
+{% endblock %}
+
 {% block body_class %}h-full bg-base-100{% endblock %}
 
 {% block favicon %}
