--- a/templates/security/request_login_link.html.twig
+++ b/templates/security/request_login_link.html.twig
@@ -12,12 +12,12 @@
                         </a>
                     {% endif %}
 
-                    <h2 class="mt-4 text-2xl/9 font-bold tracking-tight text-primary">{{ 'login.title'|trans }}</h2>
+                    <h2 class="mt-4 text-2xl/9 font-bold tracking-tight">{{ 'login.title'|trans }}</h2>
 
                     {% if registration_enabled %}
                         <p class="mt-4 text-sm/6">
                             {{ 'login.no_account'|trans }}
-                            <a href="{{ path('register') }}" class="link link-primary">
+                            <a href="{{ path('register') }}" class="link link-hover link-accent">
                                 {{ 'login.create_account'|trans }}
                             </a>
                         </p>
