--- a/assets/styles/admin.css
+++ b/assets/styles/admin.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import './tailwind-with-daisyui.css';
 
 @theme {
-    --font-sans: InterVariable, sans-serif;
+    --font-sans: 'Inter', 'sans-serif';
+    --font-display--font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+    --font-display--font-variation-settings: "opsz" 32;
 }
-
