--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -14,11 +14,11 @@
                         </a>
                     {% endif %}
 
-                    <h2 class="mt-8 text-2xl/9 font-bold tracking-tight text-primary">{{ 'register.title'|trans }}</h2>
+                    <h2 class="mt-8 text-2xl/9 font-bold tracking-tight">{{ 'register.title'|trans }}</h2>
 
                     <p class="mt-2 text-sm/6">
                         {{ 'register.already_account'|trans }}
-                        <a href="{{ path('login') }}" class="link link-primary">
+                        <a href="{{ path('login') }}" class="link link-hover link-accent">
                             {{ 'register.login'|trans }}
                         </a>
                     </p>
