feat: upgrade from fastfony/fastfony

--- a/assets/styles/admin.css
+++ b/assets/styles/admin.css
@@ -3,6 +3,6 @@
 
 @theme {
     --font-sans: 'Inter', 'sans-serif';
-    --font-display--font-feature-settings: "cv02", "cv03", "cv04", "cv11";
-    --font-display--font-variation-settings: "opsz" 32;
+    --font-display--font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+    --font-display--font-variation-settings: 'opsz' 32;
 }
