--- a/templates/installation/layout.html.twig
+++ b/templates/installation/layout.html.twig
@@ -20,7 +20,7 @@
             <div class="navbar-start">
                 <a href="https://fastfony.com?source=installation-navbar" target="_blank">
                     <img src="{{ asset('build/images/Fastfony-white.svg') }}" alt="Fastfony" class="h-16 m-4 hidden dark:block light:hidden" />
-                    <img src="{{ asset('build/images/Fastfony-black.svg') }}" alt="Fastfony" class="h-16 m-4 dark:hidden light:block bg-blend-multiply bg-primary" />
+                    <img src="{{ asset('build/images/Fastfony-black.svg') }}" alt="Fastfony" class="h-16 m-4 dark:hidden light:block" />
                     <span class="btn btn-ghost text-xl sr-only">Fastfony</span>
                 </a>
             </div>
