feat: OAuth2 server and user management login form & reset password (#13)

--- a/templates/admin/_menu.html.twig
+++ b/templates/admin/_menu.html.twig
@@ -41,6 +41,16 @@
         </a>
     </li>
     <li>
+        <h2 class="menu-title">{{ 'menu.oauth'|trans }}</h2>
+        <ul>
+            <li>
+                <a href="{{ path('admin_client_crud_index') }}">
+                    {{ 'menu.oauth.clients'|trans }}
+                </a>
+            </li>
+        </ul>
+    </li>
+    <li>
         <h2 class="menu-title">{{ 'menu.crud'|trans }}</h2>
         <ul>
             <li>
