--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -32,7 +32,7 @@
                         </a>
                     {% else %}
                         <a
-                            href="{{ path('login') }}"
+                            href="{{ path('request_login_link') }}"
                             class="text-sm font-semibold link link-hover"
                         >
                             <span>{{ 'link.login'|trans }}</span>
