--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -4,18 +4,8 @@
     {% if form is defined %}
         {{ include('security/_company_icon.html.twig') }}
 
-        <h2 class="mt-4 text-2xl/9 font-bold tracking-tight">{{ 'login.title'|trans }}</h2>
+        <h2 class="mt-4 text-2xl/9 font-bold tracking-tight">{{ 'forgot_password.title'|trans }}</h2>
 
-        {% if registration_enabled %}
-            <p class="mt-4 text-sm/6">
-                {{ 'login.no_account'|trans }}
-                <a href="{{ path('register') }}" class="link link-hover link-accent">
-                    {{ 'login.create_account'|trans }}
-                </a>
-            </p>
-        {% endif %}
-
-        <!-- Login with email link -->
         {{ form_start(form, {attr: {class: 'space-y-6 mt-4'}}) }}
         <div>
             <div class="mt-2">
@@ -24,12 +14,13 @@
                     {{ form_widget(form.email, {attr: {class: 'input w-full'}}) }}
                     {{ form_errors(form.email) }}
                 </label>
+                <p class="my-2">{{ 'forgot_password.help'|trans }}</p>
             </div>
         </div>
 
         <div class="mb-4">
             <button type="submit" class="btn btn-primary w-full">
-                {{ 'request_login_link.button'|trans }}
+                {{ 'forgot_password.button'|trans }}
             </button>
         </div>
         {{ form_end(form) }}
@@ -41,7 +32,7 @@
                 </svg>
             </div>
 
-            <p class="m-8 text-gray-500">{{ 'login.link_sent_validity'|trans }}</p>
+            <p class="m-8 text-gray-500">{{ 'forgot_password.link_sent_validity'|trans }}</p>
         </div>
     {% endif %}
 {% endblock %}
