feat: upgrade from fastfony/fastfony

--- a/templates/admin/parameters/index.html.twig
+++ b/templates/admin/parameters/index.html.twig
@@ -8,5 +8,5 @@
         <p>{{ 'settings.description'|trans|raw }}</p>
     </div>
 
-    <div {{ vue_component('Admin/Parameters') }}></div>
+    <div {{ vue_component('Admin/Settings') }}></div>
 {% endblock %}
