--- a/templates/security/request_login_link.html.twig
+++ b/templates/security/request_login_link.html.twig
@@ -44,4 +44,6 @@
             <p class="m-8 text-gray-500">{{ 'login.link_sent_validity'|trans }}</p>
         </div>
     {% endif %}
+
+    {{ include('security/_oauth_clients.html.twig') }}
 {% endblock %}
