feat: upgrade from fastfony/fastfony

--- a/templates/form/custom_types.html.twig
+++ b/templates/form/custom_types.html.twig
@@ -6,4 +6,5 @@
         {{ form_errors(form) }}
     </div>
     <div class="flex-fill"></div>
+    <p class="text-muted">{{ help|trans }}</p>
 {% endblock %}
