--- a/templates/admin/group-role/matrix.html.twig
+++ b/templates/admin/group-role/matrix.html.twig
@@ -1,6 +1,23 @@
-{% extends 'admin.html.twig' %}
+{% extends '@EasyAdmin/layout.html.twig' %}
 
 {% trans_default_domain 'admin' %}
+
+{% block page_actions %}
+    <div class="global-actions">
+        <a class="btn action-groups" href="{{ path('admin_group_crud_index') }}" data-action-name="groups">
+        <span class="icon action-icon">
+            <i class="fa fa-users"></i>
+        </span>
+            <span class="action-label">{{ 'Groups'|trans }}</span>
+        </a>
+        <a class="btn action-groups" href="{{ path('admin_role_crud_index') }}" data-action-name="roles">
+        <span class="icon action-icon">
+            <i class="fa fa-tags"></i>
+        </span>
+            <span class="action-label">{{ 'Roles'|trans }}</span>
+        </a>
+    </div>
+{% endblock %}
 
 {% block main %}
     {% set groups = [] %}
@@ -21,37 +38,8 @@
         }]|merge(roles) %}
     {% endfor %}
 
-    <div class="text-end">
-        <a class="btn" href="{{ path('admin_user_crud_index') }}">
-            <svg class="size-[1.2em]" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"></path>
-            </svg>
-            {{ 'Users'|trans }}
-        </a>
-        <a class="btn" href="{{ path('admin_group_crud_index') }}">
-            <svg class="size-[1.2em]" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z"></path>
-            </svg>
-            {{ 'Groups'|trans }}
-        </a>
-        <a class="btn" href="{{ path('admin_role_crud_index') }}">
-            <svg class="size-[1.2em]" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.33a18.095 18.095 0 0 0 5.223-5.223c.542-.827.369-1.908-.33-2.607L11.16 3.66A2.25 2.25 0 0 0 9.568 3Z"></path>
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 6h.008v.008H6V6Z"></path>
-            </svg>
-            {{ 'Roles'|trans }}
-        </a>
-    </div>
-
-    <div role="alert" class="alert alert-warning alert-soft my-6 ">
-        <div class="shrink-0">
-            <svg class="size-5 text-yellow-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
-                <path fill-rule="evenodd" d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495ZM10 5a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 10 5Zm0 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z" clip-rule="evenodd" />
-            </svg>
-        </div>
-        <span>
-            {{ 'warning-matrix'|trans|raw }}
-        </span>
+    <div class="alert alert-warning my-4" role="alert">
+        {{ 'warning-matrix'|trans|raw }}
     </div>
 
     <div {{ vue_component('Admin/GroupRole/Matrix', {
