--- a/templates/admin/group-role/matrix.html.twig
+++ b/templates/admin/group-role/matrix.html.twig
@@ -34,6 +34,7 @@
             id: role.id,
             category: role.category ? role.category.name : null,
             name: role.name,
+            description: role.description,
             groups: role.groups|map(g => g.id),
         }]|merge(roles) %}
     {% endfor %}
