--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -5,7 +5,7 @@
 
     <h2 class="mt-4 text-2xl/9 font-bold tracking-tight">{{ 'reset_password.title'|trans }}</h2>
 
-    {{ form_start(form, {attr: {class: 'space-y-6 mt-4'}}) }}
+    {{ form_start(form, {attr: {class: 'space-y-6 mt-4', 'data-turbo': 'false'}}) }}
     <div>
         <div class="mt-2">
             <label class="floating-label">
